<resources>
    <string name="app_name">Банк ЛФМШ</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>

    <string name="login_failed">Не удалось войти!</string>

    <string name="sign_out">Выйти</string>

    <string name="profile">Профиль</string>
    <string name="transactions">Транзакции</string>
    <string name="counters">Счётчики</string>

    <string name="input_login">Сначала введите логин!</string>
    <string name="input_password">Сначала введите пароль!</string>

    <string name="balance">Баланс:</string>
    <string name="certificate">Сертификаты:</string>
    <string name="seminar">Семинары/Факультативы:</string>
    <string name="labs">Отчёты по лабам:</string>
    <string name="lec_attended">Лекций посещено:</string>
    <string name="lec_missed">Лекций пропущено:</string>
    <string name="next_fine">Штраф за пропуск следующей лекции:</string>
    <string name="fac_info">Зачёты по факультативам:</string>

    <string name="send">Перевести</string>
    <string name="cancel">Отмена</string>

    <string name="create_transaction">Создание транзакции:</string>
    <string name="target_name">Логин получателя</string>
    <string name="description">Назначение перевода</string>
    <string name="description_helper">Транзакции одобряются только по уважительной причине</string>
    <string name="amount">Сумма</string>
    
    <string name="transaction_created">Перевод отправлен на рассмотрение, если он будет одобрен, то появится в истории.</string>

    <string name="ok">ОК</string>

    <string name="input_target_login">Сначала введите логин получателя!</string>
    <string name="input_target_description">Сначала введите назначение перевода!</string>
    <string name="input_target_appropriate_value">Сначала введите допустимую сумму для перевода!</string>
</resources>
